--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,12 +2,8 @@
 
 <div class="w3-top">
   <div class="w3-row w3-padding w3-theme-d1">
-    <div class="w3-col s3">
-      <a href="#" class="w3-button w3-block">PMtepi.me</a>
-    </div>
-
-
-
+    
+      <p>PMtepi.me</p>
   </div>
 </div>
 
