update profile and image test

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,57 +1,84 @@
-<!--The whole content below can be removed with the new code.-->
 
-<div class="w3-top">
-  <div class="w3-row w3-padding w3-theme-d1">
+<!DOCTYPE html>
+<html>
+<title>W3.CSS Template</title>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+<link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Roboto'>
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+<style>
+html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
+</style>
+<body class="w3-light-grey">
+
+<!-- Page Container -->
+<div class="w3-content w3-margin-top" style="max-width:1400px;">
+
+  <!-- The Grid -->
+  <div class="w3-row-padding">
+  
+    <!-- Left Column -->
+    <div class="w3-third">
     
-      <p>PMtepi.me</p>
-  </div>
-</div>
+      <div class="w3-white w3-text-grey w3-card-4">
+        <div class="w3-display-container">
+          <img src="/assets/resources/images/avatar_hat.jpg" style="width:100%" alt="Avatar">
+          <div class="w3-display-bottomleft w3-container w3-text-black">
+            <h2>Mohamad Taufiq Bin Tomadan</h2>
+          </div>
+        </div>
+        <div class="w3-container">
+          <p><i class="fa fa-briefcase fa-fw w3-margin-right w3-large w3-text-teal"></i>PETRONAS ICT Sdn Bhd</p>
+          <p><i class="fa fa-home fa-fw w3-margin-right w3-large w3-text-teal"></i>Petaling Jaya, Selangor</p>
+          <p><i class="fa fa-envelope fa-fw w3-margin-right w3-large w3-text-teal"></i>tfqnet@gmail.com</p>
+          <p><i class="fa fa-phone fa-fw w3-margin-right w3-large w3-text-teal"></i><a href="tel:+60192166699">+60192166699</a></p>
+         
+        </div>
+      </div><br>
 
-<!-- Header -->
-<header class="w3-container w3-theme-d1 w3-center " style="padding:128px 16px">
-  <h1 class="w3-margin w3-jumbo w3-animate-top">COMING SOON!</h1>
-  <p class="w3-xlarge">Psst!!.. PMtepi.me</p>
+    <!-- End Left Column -->
+    </div>
 
-</header>
-<!-- About Container -->
-<div class="w3-container">
-  <div class="w3-content" style="max-width:700px">
-    <h3 class="w3-center w3-padding-64"><span class="w3-wide">ABOUT</span></h3>
-    <p>PMtepi.me is a simplified portal for your profiles.  Having too many social media profiles will get your contact confused, but by having PMtepi.me, getting in touch with you will never be easier. </p>
-  </div>
-  <!-- WHAT Container -->
-</div>
-<div class="w3-container">
-  <div class="w3-content" style="max-width:700px">
-    <h3 class="w3-center w3-padding-64"><span class="w3-wide">WHAT</span></h3>
-    <p>A combination of "Private Message" and "tepi" which means 'side' is a local slang for "message me privately". A perfect combination to represent our portal in which our main purpose is to help you organize all your social media websites and also your personal contact information. With just as simple as PMtepi.me/yourname, you shall have your personal digital business card in one single page. You may add your facebook, your twitter, your instagram and even your phone number or address. Anything that you want to include as your business card, PMtepi.me will get you there.</p>
-  </div>
-</div>
-<!-- WHO Container -->
-<div class="w3-container">
-  <div class="w3-content" style="max-width:700px">
-    <h3 class="w3-center w3-padding-64"><span class="w3-wide">WHO</span></h3>
-    <p>We are nerds and geeks exploring opportunities in the digital world to gain knowledge and new experience</p>
-  </div>
-</div>
-<!-- WHEN Container -->
-<div class="w3-container" style="padding-bottom:100px">
-  <div class="w3-content" style="max-width:700px">
-    <h3 class="w3-center w3-padding-64"><span class="w3-wide">WHEN</span></h3>
-    <p class="w3-center">Coming to you really really soon!! So stay tuned.</p>
-  </div>
-</div>
-
-
-<!-- Footer -->
-<footer class="w3-container w3-padding-64 w3-center w3-opacity w3-theme-d1">
-  <div class="w3-xlarge w3-padding-32">
-    <a href="https://www.facebook.com/pmtepi.me" target="_blank"><i class="fa fa-facebook-official w3-hover-opacity"></i></a>
+    <!-- Right Column -->
+    <div class="w3-twothird">
     
-    <a href="https://www.instagram.com/pmtepime/?hl=en" target="_blank"><i class="fa fa-instagram w3-hover-opacity"></i></a>
-    <a href="https://twitter.com/PMtepime" target="_blank"><i class="fa fa-twitter w3-hover-opacity"></i></a>
+      
+
+      <div class="w3-container w3-card w3-white">
+        <h2 class="w3-text-grey w3-padding-16"><i class="fa fa-certificate fa-fw w3-margin-right w3-xxlarge w3-text-teal"></i>Emergency Contact</h2>
+        <div class="w3-container">
+          <h5 class="w3-opacity"><b>Kamariah Binti Sujak</b></h5>
+          <p><i class="fa fa-phone fa-fw w3-margin-right w3-large w3-text-teal"></i>+60198181614</p>
+          <hr>
+        </div>
+        <div class="w3-container">
+          <h5 class="w3-opacity"><b>Mohd Faisal Azhan</b></h5>
+          <p><i class="fa fa-phone fa-fw w3-margin-right w3-large w3-text-teal"></i>+60193355848</p>
+          <hr>
+        </div>
+        <div class="w3-container">
+          <h5 class="w3-opacity"><b>B Lailatulmuna Binti Sadiman</b></h5>
+          <p><i class="fa fa-phone fa-fw w3-margin-right w3-large w3-text-teal"></i>+60163354445</p>
+          <hr>
+        </div>
+        
+      </div>
+
+    <!-- End Right Column -->
+    </div>
     
- </div>
-  <p>Copyright @2017</p>
- <!--<p>Powered by <a href="https://www.w3schools.com/w3css/default.asp" target="_blank">w3.css</a></p>-->
+  <!-- End Grid -->
+  </div>
+  
+  <!-- End Page Container -->
+</div>
+
+<footer class="w3-container w3-teal w3-center w3-margin-top">
+  
+  
+  <p>Powered by <a href="https://www.w3schools.com/w3css/default.asp" target="_blank">w3.css</a></p>
 </footer>
+
+</body>
+</html>
