--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -11,9 +11,11 @@
 html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
 </style>
 <body class="w3-light-grey">
-
+  
 <!-- Page Container -->
 <div class="w3-content w3-margin-top" style="max-width:1400px;">
+  
+  
 
   <!-- The Grid -->
   <div class="w3-row-padding">
@@ -49,17 +51,17 @@ html,body,h1,h2,h3,h4,h5,h6 {font-family: "Roboto", sans-serif}
         <h2 class="w3-text-grey w3-padding-16"><i class="fa fa-certificate fa-fw w3-margin-right w3-xxlarge w3-text-teal"></i>Emergency Contact</h2>
         <div class="w3-container">
           <h5 class="w3-opacity"><b>Kamariah Binti Sujak</b></h5>
-          <p><i class="fa fa-phone fa-fw w3-margin-right w3-large w3-text-teal"></i>+60198181614</p>
+          <p><i class="fa fa-phone fa-fw w3-margin-right w3-large w3-text-teal"></i><a href="tel:+60198181614">+60198181614</a></p>
           <hr>
         </div>
         <div class="w3-container">
           <h5 class="w3-opacity"><b>Mohd Faisal Azhan</b></h5>
-          <p><i class="fa fa-phone fa-fw w3-margin-right w3-large w3-text-teal"></i>+60193355848</p>
+          <p><i class="fa fa-phone fa-fw w3-margin-right w3-large w3-text-teal"></i><a href="tel:+60193355848">+60193355848</a></p>
           <hr>
         </div>
         <div class="w3-container">
           <h5 class="w3-opacity"><b>B Lailatulmuna Binti Sadiman</b></h5>
-          <p><i class="fa fa-phone fa-fw w3-margin-right w3-large w3-text-teal"></i>+60163354445</p>
+          <p><i class="fa fa-phone fa-fw w3-margin-right w3-large w3-text-teal"></i><a href="tel:+60163354445">+60163354445</a></p>
           <hr>
         </div>
         
